passage en mode https et mises au point